# findmarket

./: Cargo.toml  README.MD
src/: main.rs
src/collectors/: error.rs  mod.rs  symbol.rs
src/collectors/binance/: mod.rs
src/collectors/bitstamp/: mod.rs
src/collectors/coinbase/: mod.rs
src/collectors/kraken/: mod.rs
src/collectors/poloniex/: mod.rs
