[package]
name = "findmarket"
version = "0.1.0"
authors = ["Yuriy Kuznetsov <ykuznetsov@b2broker.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
prettytable-rs = "^0.8"
clap = "3.0.0-beta.2"